--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="mb-4">Artful og Egentlig hilser</h1>
     <div class="alert alert-info" role="alert">
       <h4 class="alert-heading">Gjestehilsen</h4>
-      <iframe src="https://clips.twitch.tv/embed?clip=SmellyLuckyHerdBabyRage-CukIRuAFNVsB2znk&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+      <iframe src="https://clips.twitch.tv/embed?clip=SmellyLuckyHerdBabyRage-CukIRuAFNVsB2znk&parent=hilsen.opplegget.no" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
     </div>
     <div id="quotes" class="d-none"></div>
 </div>
