Ny gjestehilsen + dark mode

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Artful og Egentlig hilser</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body data-bs-theme="dark">
 <div class="container-md">
     <h1 class="mb-4">Artful og Egentlig hilser</h1>
     <div class="alert alert-info" role="alert">
       <h4 class="alert-heading">Gjestehilsen</h4>
+      <iframe src="https://clips.twitch.tv/embed?clip=RepleteSavoryRaisinKAPOW-6wKaZ4p3y_Mcj3pW&parent=hilsen.opplegget.no" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
       <iframe src="https://clips.twitch.tv/embed?clip=SmellyLuckyHerdBabyRage-CukIRuAFNVsB2znk&parent=hilsen.opplegget.no" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
     </div>
     <div id="quotes" class="d-none"></div>
