--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         const quotes = document.querySelector("#quotes");
 
         try {
-            const response = await fetch("https://api.teknisk.team/twitch/user/artful-egentlig/v1/greeting");
+            const response = await fetch("https://api.j4d.dev/twitch/user/artful-egentlig/v1/greeting");
 
             const json = await response.json();
 
