--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         const quotes = document.querySelector("#quotes");
 
         try {
-            const response = await fetch("https://api.j4d.dev/spinner-rewrite/note/hilsen");
+            const response = await fetch("https://api.j4d.dev/spinner/note/hilsen");
 
             const json = await response.json();
 
